# validate-pyproject

./: .cirrus.yml  .coveragerc  .coveralls.yml  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .projections.json  .readthedocs.yml  .ruff.toml  CHANGELOG.rst  CONTRIBUTING.rst  NOTICE.txt  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: _gendocs.py  conf.py  dev-guide.rst  embedding.rst  faq.rst  index.rst  json-schemas.rst  modules.rst.in  requirements.txt  schemas.rst
docs/_static/: custom-adjustments.css
src/validate_pyproject/: __init__.py  _resources.py  _tomllib.py  api.py  caching.py  cli.py  config.py  embed.py  error_reporting.py  errors.py  extra_validations.py  format.py  formats.py  http.py  pep517_518.json  pep517_518.schema.json  pep518.json  pep621_project.json  pep621_project.schema.json  pretty_errors.py  project_metadata.schema.json  pyproject_toml.schema.json  remote.py  repo_review.py  schema.py  skeleton.py  types.py
src/validate_pyproject/_vendor/: vendoring_instructions.rst
src/validate_pyproject/_vendor/fastjsonschema/: generator.py
src/validate_pyproject/plugins/: __init__.py  distutils.schema.json  setuptools.py  setuptools.schema.json
src/validate_pyproject/pre_compile/: __init__.py  cli.py
src/validate_pyproject/repo_review/: checks.py  families.py
src/validate_pyproject/vendoring/: NOTICE.template  __init__.py  cli.py  main_file.template
tests/: conftest.py  helpers.py  test_api.py  test_caching.py  test_cli.py  test_config.py  test_error_reporting.py  test_examples.py  test_format.py  test_formats.py  test_json_schema_summary.py  test_plugins.py  test_pre_compile.py  test_pretty_errors.py  test_repo_review.py  test_skeleton.py  test_vendoring.py
tests/examples/atoml/: pyproject.toml
tests/examples/cibuildwheel/: overrides.toml  test_config.json
tests/examples/localtool/: localtool.schema.json  nestedtool.schema.json  working.toml
tests/examples/pdm/: pyproject.toml  test_config.json
tests/examples/pep_text/: pyproject.toml
tests/examples/poetry/: test_config.json
tests/examples/pretend-setuptools/: 01-pyproject.toml  02-pyproject.toml  03-pyproject.toml  04-pyproject.toml  06-pyproject.toml  07-pyproject.toml
tests/examples/pretend-setuptools-examples/: 02-pyproject.toml  03-pyproject.toml  05-pyproject.toml  06-pyproject.toml  pyproject.toml
tests/examples/ruff/: modern.toml  test_config.json
tests/examples/setuptools/: 08-pyproject.toml  10-pyproject.toml  11-pyproject.toml  12-pyproject.toml  readme-pyproject.toml
tests/examples/simple/: depgroups.toml  dynamic-version.toml  empty-author.toml  import_names.toml  minimal.toml  partially-dynamic-entry-points.toml  partially-dynamic.toml  pep639.toml  pep770.toml
tests/examples/store/: example.toml  test_config.json
tests/examples/trampolim/: pyproject.toml
tests/invalid-examples/cibuildwheel/: overrides-noaction.toml  overrides-noselect.errors.txt  overrides-noselect.toml  test_config.json  unknown-option.errors.txt
tests/invalid-examples/localtool/: fail1.errors.txt  fail1.toml  fail2.errors.txt  fail2.toml  test_config.json
tests/invalid-examples/normalized_pep440/: pyproject.toml
tests/invalid-examples/pdm/invalid-version/: errors.txt  pyproject.toml
tests/invalid-examples/pdm/redefining-as-dynamic/: errors.txt  pyproject.toml
tests/invalid-examples/pep621/dynamic/: static_entry_points_listed_as_dynamic.errors.txt  static_entry_points_listed_as_dynamic.toml  static_version_listed_as_dynamic.errors.txt  static_version_listed_as_dynamic.toml
tests/invalid-examples/pep621/incorrect-subtables/: author_with_extra_fields.errors.txt  author_with_extra_fields.toml
tests/invalid-examples/pep621/missing-fields/: empty-author.errors.txt  empty-author.toml  missing-version-with-dynamic.toml  missing-version.errors.txt  missing-version.toml
tests/invalid-examples/pep621/non-standardised-project-fields/: author_instead_of_authors.errors.txt  author_instead_of_authors.toml  requires_instead_of_dependencies.errors.txt  requires_instead_of_dependencies.toml
tests/invalid-examples/pep621/pep639/: bothstyles.errors.txt  bothstyles.toml
tests/invalid-examples/pep621/pep770/: pep770-string.errors.txt  pep770-string.toml
tests/invalid-examples/pep735/: invalid-group.errors.txt  invalid-group.toml  invalid-key.errors.txt  invalid-key.toml  not-pep508.errors.txt  not-pep508.toml
tests/invalid-examples/poetry/: poetry-bad-multiline.errors.txt  test_config.json
tests/invalid-examples/pretend-setuptools/cmdclass/: invalid-value.errors.txt  invalid-value.toml
tests/invalid-examples/pretend-setuptools/dependencies/: invalid-extra-name.errors.txt  invalid-extra-name.toml
tests/invalid-examples/pretend-setuptools/package-dir/: invalid-name.errors.txt  invalid-name.toml
tests/invalid-examples/ruff/: badcode.errors.txt  unknown.toml
tests/invalid-examples/setuptools/attr/: missing-attr-name.errors.txt  missing-attr-name.toml
tests/invalid-examples/setuptools/cmdclass/: invalid-value.toml
tests/invalid-examples/setuptools/dependencies/: invalid-extra-name.errors.txt
tests/invalid-examples/setuptools/dynamic/: readme-missing-file.errors.txt  readme-missing-file.toml  (+2 more)
tests/invalid-examples/simple/: pep639.toml  pep794-dup.errors.txt  pep794-dup.toml  pep794-keyword.errors.txt  pep794-keyword.toml  pep794-missing-parents.errors.txt  pep794-missing-parents.toml  pep794-not-private.errors.txt  pep794-not-private.toml
tests/invalid-examples/store/: cibw-overrides-noaction.errors.txt  cibw-unknown-option.toml  ruff-badcode.toml  ruff-unknown.errors.txt  test_config.json
tests/json_schema_summary/: array-contains.example  array-no-items.example  array-prefix-items.example  array-simple.example  if-then-else.example  if-then-else2.example  not.example  object-no-properties.example  object-pattern-properties.example  object-property-names.example  oneof.example
tests/pre_compile/: test_cli.py
tools/: cache_urls_for_tests.py  to_schemastore.py
(+18 files in other folders)
