# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = validate-pyproject
description = Validation library and CLI tool for checking on 'pyproject.toml' files using JSON Schema
author = Anderson Bravalheri
author_email = andersonbravalheri@gmail.com
license = MPL-2.0 and MIT and BSD-3-Clause
license_files =
    LICENSE.txt
    NOTICE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/abravalheri/validate-pyproject/
# Add here related links, for example:
project_urls =
    Documentation = https://validate-pyproject.readthedocs.io/
    Source = https://github.com/abravalheri/validate-pyproject
    Tracker = https://github.com/abravalheri/validate-pyproject/issues
    Changelog = https://validate-pyproject.readthedocs.io/en/latest/changelog.html
    Download = https://pypi.org/project/validate-pyproject/#files
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.6

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"
    importlib-resources; python_version<"3.7"
    fastjsonschema>=2.16.2,<=3


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
all =
    tomli>=1.2.1; python_version<"3.11"
    packaging>=20.4
    trove-classifiers>=2021.10.20

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov
    pytest-xdist
    pytest-randomly
    repo-review; python_version>="3.10"
    tomli>=1.2.1; python_version<"3.11"

typecheck =
    mypy
    importlib-resources

[options.entry_points]
# Add here console scripts like:
console_scripts =
    validate-pyproject = validate_pyproject.cli:main
validate_pyproject.tool_schema =
    setuptools = validate_pyproject.api:load_builtin_plugin
    distutils = validate_pyproject.api:load_builtin_plugin
repo_review.checks =
    validate_pyproject = validate_pyproject.repo_review:repo_review_checks
repo_review.families =
    validate_pyproject = validate_pyproject.repo_review:repo_review_families

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.3.1
package = validate_pyproject
extensions =
    cirrus
    pre_commit
